--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.19.0",
+    "bruteforce": "0.0.2",
     "ejs": "^3.1.6",
     "express": "^4.17.1"
   }
